[package]
name = "cargo-export"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Utility to export compiler artifacts from cargo build process"
homepage = "https://github.com/bazhenov/cargo-export"
documentation = "https://github.com/bazhenov/cargo-export"
repository = "https://github.com/bazhenov/cargo-export"
readme = "README.md"
categories = ["development-tools::cargo-plugins", "command-line-utilities", "development-tools::build-utils"]
keywords = ["cli", "cargo", "build"]

[dependencies]
getopts = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
